api-reference/rest-apis/v1/documents/delete-documents.mdx
---
title: "Delete Documents"
api: "POST https://api.velt.dev/v1/organizations/documents/delete"
# api: "POST https://deletedocuments.api.velt.dev/"
---

Use this API to delete specific documents from an organization.

# Endpoint

`POST https://api.velt.dev/v1/organizations/documents/delete`

# Headers

<ParamField header="x-velt-api-key" type="string" required>
  Your API key.
</ParamField>

<ParamField header="x-velt-auth-token" type="string" required>
  Your [Auth Token](/security/auth-tokens).
</ParamField>

# Body

#### Params

<ParamField body="data" type="object" required>
  <Expandable title="properties">
    <ParamField body="organizationId" type="string" required>
      Organization ID
    </ParamField>

    <ParamField body="documentIds" type="string[]" required>
      Array of Document IDs
    </ParamField>
  </Expandable>
</ParamField>

## **Example Requests**

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentIds": ["yourDocumentId1", "yourDocumentId2"]
  }
}
```

# Response

#### Success Response

```JSON
{
  "result": {
    "status": "success",
    "message": "Document(s) deleted successfully.",
    "data": {
      "yourDocumentId1": {
        "success": true,
        "id": "6737987049068973",
        "message": "Deleted Successfully"
      },
      "yourDocumentId2": {
        "success": false,
        "id": "yourDocumentId2",
        "message": "Document does not exist",
        "code": "not-found"
      }
    }
  }
}
```


#### Failure Response

```JSON
{
  "error": {
    "message": "ERROR_MESSAGE",
    "status": "INVALID_ARGUMENT"
  }
}
```

#### Per-Item Failures

This endpoint returns HTTP `200` even when individual documents fail. Check `success` on each entry rather than the HTTP status.

<ResponseField name="code" type="string">
  Why this particular item failed. Present on every entry with `"success": false`.

  | Value | Meaning | Safe to retry? |
  | --- | --- | --- |
  | `not-found` | The document does not exist. | No |
  | `internal` | A genuine server-side failure. | Yes |
</ResponseField>

```JSON
{
  "result": {
    "status": "success",
    "message": "Document(s) deleted successfully.",
    "data": {
      "yourDocumentId1": {
        "success": true,
        "id": "6737987049068973",
        "message": "Deleted Successfully"
      },
      "yourDocumentId2": {
        "success": false,
        "id": "yourDocumentId2",
        "message": "Document does not exist",
        "code": "not-found"
      }
    }
  }
}
```

<ResponseExample>
```js
{
  "result": {
    "status": "success",
    "message": "Document(s) deleted successfully.",
    "data": {
      "yourDocumentId1": {
        "success": true,
        "id": "6737987049068973",
        "message": "Deleted Successfully"
      }
    }
  }
}
```
</ResponseExample>